2004-12-20  Per Bothner  <per@bothner.com>

	* Lisp2.java (selfEvaluatingSymbol): New method.

2004-12-05  Per Bothner  <per@bothner.com>

	Update for new Symbol/Location handling.
	* Lisp2.java (defun, getEnvPropertyFor): New methods.
	(defineFunction, getNewEnvironment): Removed.
	(getSymbol): Rename to asSymbol - to avoid confusion.
	* CommonLisp.java (defun): Remove methods - moved to Lisp2.
	(<init>): Various updates.
	(defineFormFieldValue): Remove - no longer need to override.
	* CLispReader.java: Update getSymbol->asSymbol.
	* SymbolTable.java: Remove class.
	* Makefile.am: Update accordingly.
	* Symbols.java: Update methods.
	(plistGet, plistPut, plistRemove): Moved to
	gnu.mapping.PropertyLocation.
	(setValueBinding, getPrintName): Remove methods.
	* function.java (rewriteForm): Not that we PREFER_BINDING2.

2004-11-10  Per Bothner  <per@bothner.com>

	* CommonLisp.java (CommonLisp): Remove definitions of 'and' and 'or'.
	Instead used definitions in kawa.lib.std_syntax.

2004-11-06  Per Bothner  <per@bothner.com>

	* CommonLisp.java (<init>): Also load prim_syntax.
	This defines if, so we don't need removed kawa.standard.ifp.

2004-07-20  Per Bothner  <per@bothner.com>

	* CLispReader.java:  Remove unused import statements.
	* defun.java:  Use static syntax to invoke static methods.
	* defvar.java:  Likewise.

2004-01-09  Per Bothner  <per@bothner.com>

	* CommonLisp.java (registerEnvironment):  Update setCurrent->setGlobal.

2003-10-12  Per Bothner  <per@bothner.com>

	* prog1.java:  New class, extends Syntax.
	* function.java:  New class, extends Syntax.
	* Makefile.am (java_sources):  Update accordingly.
	* CommonLisp.java (<init>):  Define function, prog1, prog2.

	* defun.java (rewriteForm):  Simplify.
	* defvar.java (rewriteForm):  Handle Symbols properly.

2003-10-08  Per Bothner  <per@bothner.com>

	* CommonLisp.java (<init>):  Minor simplification/optimization.

2003-04-18  Per Bothner  <per@bothner.com>
