@@ -1,3 +1,9 @@
+2005-01-29  Per Bothner  <per@bothner.com>
+
+	* Lisp2.java: Extend LispLanguage rather than LispInterpreter.
+
+	* Lisp2.java (fromLangSymbol): New method.
+
 2004-12-20  Per Bothner  <per@bothner.com>
 
 	* Lisp2.java (selfEvaluatingSymbol): New method.
